Initial Commit for jekyll site for aws-http

--- a/_pages/home.html
+++ b/_pages/home.html
@@ -4,4 +4,20 @@ title: Home
 permalink: /
 ---
 
-Hello World! aws-http rocks!
+<div class="jumbotron">
+  <div class="container-fluid">
+    <h1>aws-http</h1>
+    <p class="lead">A fluent http client for aws. This library should be used to access the aws resources over http where aws v4 sign is necessary.</p>
+    <p>
+      <a href="https://travis-ci.org/RishikeshDarandale/aws-http">
+        <img src="https://travis-ci.org/RishikeshDarandale/aws-http.svg?branch=master" />
+      </a>
+      <a href="https://codecov.io/gh/RishikeshDarandale/aws-http">
+        <img src="https://codecov.io/gh/RishikeshDarandale/aws-http/branch/master/graph/badge.svg" />
+      </a>
+      <a href='https://www.versioneye.com/user/projects/5a6e9e390fb24f497047f924'>
+        <img src='https://www.versioneye.com/user/projects/5a6e9e390fb24f497047f924/badge.svg?style=flat-square' alt="Dependency Status" />
+      </a>
+    </p>
+  </div>
+</div>
