Updated te styles for toc

--- a/_pages/home.html
+++ b/_pages/home.html
@@ -5,8 +5,8 @@ permalink: /
 ---
 <div class="main-content container-fluid">
   <div class="row">
-    <div class="d-none d-xs-none d-sm-none d-md-block d-lg-block col-md-2 col-lg-2">
-      <nav id="toc" class="sticky-top" data-toggle="toc"></nav>   
+    <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+      <nav id="toc" class="toc" data-toggle="toc"></nav>
     </div>
     <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
       <p>
